<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_weight="0.8"
        android:background="@drawable/bg_tital"
        android:orientation="horizontal">
        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />
        <ImageView
            android:id="@+id/img_back_frag_group"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:src="@drawable/btn_back"
            android:scaleType="centerInside"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />
        <TextView
            android:id="@+id/back_frag_group"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/tital_addresslist"
            android:textColor="@color/white_color"/>
        <TextView
            android:id="@+id/tital_frag_group"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textColor="@color/white_color"
            android:gravity="center"/>
        <Space
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="2.5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_weight="0.8"
        android:background="@drawable/search_bar"
        android:orientation="horizontal" >
        <Space
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="0.13" />
        <EditText
            android:id="@+id/filter_edit_frag_group"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="0.77"
            android:singleLine="true"
            android:background="#00000000"
            android:textColor="@color/gray_color" />
        <Space
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/partition_frag_group"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_weight="0.12"
        android:orientation="horizontal"
        android:background="@color/gray_color_light">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_weight="9.28"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="9"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/adduser_frag_group"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1.05"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/group_adduser"
                    android:padding="5dp"
                    android:layout_marginLeft="3dp"
                    android:scaleType="centerInside"/>
                <TextView
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:gravity="center_vertical"
                    android:text="@string/add_number"
                    android:textColor="@color/black_color"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="0.19"
                android:background="@color/gray_color_light">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="8.76"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/nomember_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_color_light">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black_color"
                        android:gravity="center"
                        android:text="@string/no_member"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ListView
                        android:id="@+id/list_frag_group"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_weight="9"
                        android:dividerHeight="1dp"
                        android:divider="@color/gray_color_light"
                        android:listSelector="#00000000">
                    </ListView>
                    <LinearLayout
                        android:id="@+id/operation_frag_group"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_weight="1"
                        android:background="@drawable/group_bottom"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/exit_frag_group"
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/tital_cancel"
                            android:textColor="@color/blue_color"/>
                        <TextView
                            android:id="@+id/delete_frag_group"
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/group_delete"
                            android:textColor="@color/blue_color"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
    </LinearLayout>
</LinearLayout>

