<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:clickable="true"
    android:background="@color/background_color" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_weight="0.8"
        android:background="@drawable/bg_tital"
        android:orientation="horizontal">
        <ImageView 
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/img_back_personal_addresslist"
            android:src="@drawable/btn_back"
            android:scaleType="centerInside"/>
        <TextView 
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/tital_addresslist"
            android:textColor="@color/white_color"
            android:id="@+id/title_personal_addresslist"/>
        <Space 
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="7.5"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_weight="9.2"
        android:orientation="vertical" >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="3"
            android:orientation="horizontal">
            <LinearLayout 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </LinearLayout>
            <LinearLayout 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical" >
            <Space
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1.2"/>
            <ImageView 
                android:id="@+id/personal_addresslist_png"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="4.7"
                android:src="@drawable/inviter"
                android:scaleType="centerInside"/>
            <Space 
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"/>
            <TextView 
                android:id="@+id/personal_addresslist_name"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:gravity="center"
                android:textColor="@color/online_color"
                android:layout_weight="1.7"/>
            <Space 
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1.4"/>
            </LinearLayout>
            <LinearLayout 
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical" >
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_weight="0.5"/>
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <Space
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_weight="2"/>
                    <TextView 
                        android:id="@+id/btn_collect"
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:padding="5dp"
                        android:gravity="center_horizontal"
                    />
                    <Space
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_weight="2"/>
                </LinearLayout>
                
                <TextView 
                    android:id="@+id/collect_status"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:gravity="center"
                    android:textColor="@color/blue_color"
                    android:layout_weight="1"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_weight="6.5"/>
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.8"
            android:background="@drawable/white_frame"
            android:orientation="horizontal" >
            <Space 
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_weight="0.7"/>
            <TextView 
                android:id="@+id/personal_conpany"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/company"
                android:textColor="@color/black_color" />
            <TextView 
                android:id="@+id/personal_addresslist_conpany"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="6.3"
                android:textColor="@color/gray_color" 
                android:gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color_light"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.8"
            android:background="@drawable/white_frame"
            android:orientation="horizontal" >
            <Space 
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_weight="0.7"/>
            <TextView 
                android:id="@+id/personal_department"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/department"
                android:textColor="@color/black_color" />
            <TextView 
                android:id="@+id/personal_addresslist_department"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="6.3"
                android:textColor="@color/gray_color" 
                android:gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color_light"/>
        <LinearLayout 
            android:id="@+id/Sdepartment_layout"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.8"
            android:background="@drawable/white_frame"
            android:orientation="horizontal" >
            <Space 
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_weight="0.7"/>
            <TextView 
                android:id="@+id/personal_Sdepartment"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/second_department"
                android:textColor="@color/black_color" />
            <TextView 
                android:id="@+id/personal_addresslist_second_department"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="6.3"
                android:textColor="@color/gray_color" 
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.6"
            android:orientation="vertical" >

        </LinearLayout>
        <LinearLayout 
            android:id="@+id/Phone_layout"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.8"
            android:background="@drawable/white_frame"
            android:orientation="horizontal" >
            <Space 
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_weight="0.7"/>
            <TextView 
                android:id="@+id/personal_phone"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textColor="@color/black_color" />
            <TextView 
                android:id="@+id/personal_addresslist_phone"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="6.3"
                android:textColor="@color/phonenumber_color" 
                android:gravity="center_vertical"/>
        </LinearLayout>
        <Space 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.5"
            android:orientation="vertical" />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="0.9"
            android:orientation="horizontal" >
            <Space 
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_weight="0.5"/>
            <Button 
                android:id="@+id/btn_personal_addresslist"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:text="@string/tital_conferencing"
                android:textColor="@color/white_color"
                android:background="@drawable/btn_conferencing"
                />
            <Space 
               android:layout_width="1px"
               android:layout_height="match_parent"
               android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="1.8"
            android:orientation="horizontal" >

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
